visualization/app/codeCharta/ui/ribbonBar/ribbonBar.component.scss
cc-ribbon-bar {
	position: fixed;
	z-index: 10;
	white-space: nowrap;
	display: flex;
	flex-wrap: nowrap;
	flex-direction: row;
	width: 100%;
	$heightExpanded: 195;
	$heightCollapsed: 38;
	$border: 1px solid #cdcdcd;

	#height-and-color-metric-container {
		display: flex;
		flex-wrap: nowrap;
		flex-direction: row;
		border: none;
		flex: 2.5 2.5 0;

		.mat-mdc-card {
			box-shadow: none;
		}
	}

	.badge-custom-configs {
		position: absolute;
		top: -5px;
		padding: 4px 6px;
		border-radius: 50%;
		background: red;
		color: white;
		font-size: 10px;
		line-height: 10px;
	}

	.badge-ai {
		position: absolute;
		top: -5px;
		padding: 4px 6px;
		border-radius: 50%;
		background: red;
		color: white;
		font-size: 10px;
		line-height: 10px;
	}

	.cc-ribbon-bar-menu-button {
		height: 22px;
		line-height: 22px;
		min-width: 45px;
		margin: 0;
		padding: 0;
		font-size: 9pt;
		background-color: rgba(230, 230, 230, 0.96);
		color: rgb(68, 68, 68);

		&:hover {
			background-color: #c8c8c8;
		}
	}

	cc-search-panel {
		.search-panel-card.expanded {
			height: 100%;

			.section-body {
				min-height: ($heightExpanded - $heightCollapsed) + 5 + px;
				max-height: 500px;
				overflow-y: auto;
			}
		}
	}

	.mat-mdc-card {
		padding: 0;
		height: ($heightCollapsed + 8) + px;
		border-radius: 0;
		border-top: $border;
		flex: 1 1 0;
		transition: 200ms width ease-in-out;

		.section {
			display: inline-block;
			height: 100%;
			width: 100%;
			border-right: $border;
			vertical-align: top;
			overflow: hidden;

			&#height-metric-section {
				border-right: none;
			}

			.section-header {
				margin: 0 5px 0 5px;
				height: 31px;
				color: #444444;
				overflow: hidden;
				padding: 5px;

				&#area-metric-header-section,
				&#height-metric-header-section,
				&#color-metric-header-section,
				&#edge-metric-header-section {
					border-bottom: 1px solid rgba(0, 0, 0, 0.12);
				}
			}

			.section-title {
				font-size: 8pt;
				display: block;
				width: 100%;
				color: gray;
				text-align: center;
				transition: background-color 0.4s;
				padding: 1px 0 1px 0;
				border-bottom: 1px solid transparent;

				&:hover {
					background-color: #e0e0e0;
					cursor: pointer;
				}

				&:focus {
					outline: none;
				}

				&.no-hover {
					pointer-events: none;
				}

				i:before {
					content: "\f107";
				}
			}
		}

		&.expanded {
			.section-title {
				i:before {
					content: "\f106";
				}
			}

			.section-body {
				cc-reset-settings-button button {
					opacity: 1;
					pointer-events: all;
				}
			}
		}

		.section-height-metric-card {
			border-right: none;
		}

		.delta-color-section {
			line-height: 45px;
			vertical-align: baseline;

			&:hover {
				cursor: pointer;
			}

			.color-icon {
				margin: 8px;
			}
			.color-dropdown-icon {
				position: absolute;
				top: 12px;
				right: 8px;
			}
		}

		&.ai-card,
		&.custom-configs-card {
			.section {
				.section-header {
					overflow: visible;
					text-align: center;
				}
				.section-title {
					padding: 1px 5px;
				}
			}
		}
	}
	mat-card,
	.section .section-header,
	.section .section-body,
	.section-body cc-reset-settings-button button {
		transition: height 0.1s ease;
	}

	mat-card.custom-configs-card,
	mat-card.ai-card {
		max-width: 120px;
		min-width: 120px;
	}
	mat-card.link-color-metric-to-height-metric-card {
		display: flex;
		justify-content: center;
		flex-grow: 0;
	}
	mat-card.scenario-card {
		max-width: 100px;
		min-width: 100px;
	}

	cc-area-metric-chooser,
	cc-height-metric-chooser,
	cc-color-metric-chooser,
	cc-edge-metric-chooser {
		display: flex;
		align-items: center;
		margin: auto;

		i {
			margin-right: 8px;
		}
	}

	.cc-metric-settings-panel {
		display: flex;
		flex-direction: column;
		position: absolute;
		top: 45px;
		right: 0;
		padding: 8px;
		width: 280px;
		background: white;
		border: 1px solid #b5b5b5;
		box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.2), 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 2px 1px -1px rgba(0, 0, 0, 0.12);
		overflow: hidden;
		opacity: 1;
		font-size: 0.9em;
		transition: max-height 200ms ease-in-out;

		&.hidden {
			max-height: 0;
			pointer-events: none;
			opacity: 0;
			transition: opacity 0ms 200ms, max-height 200ms ease-in-out;
		}
	}
}

